bdr.BDR2.scala.error
Erreur de compilation :
BDR2:3: error: value update is not a member of String
  litMessage()= lettre
  ^